<resources>
    <string name="app_name">TaskTrackr</string>
    <string name="save_task">Save task</string>
    <string name="project_caption">Project:</string>
    <string name="description">Description</string>
    <string name="calendar">Calendar</string>
    <string name="select_date">Select date</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="end_date">End date</string>
    <string name="save_project">Save project</string>
    <string name="search">Search</string>
    <string name="projects">Projects</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="project_details">Project details</string>
    <string name="mark_completed">Mark as completed</string>
    <string name="mark_not_completed">Mark as not completed</string>
    <string name="delete_project">Delete project</string>
    <string name="tasks">Tasks</string>
    <string name="deadline">Deadline</string>
    <string name="priority">Priority</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="images">Images</string>
    <string name="explain_camera_permission">To add photos to your tasks you must grant permission to use the camera</string>
    <string name="required_permission">Required permission</string>
    <string name="camera_request_rationale">Allow TaskTrackr to use camera to add photos to your tasks</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_task">Delete task</string>
    <string name="edit_project">Edit project</string>
    <string name="deadline_date">Deadline: %s</string>
    <string name="project">Project</string>
    <string name="task">Task</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_project">Create project</string>
    <string name="create_task">Create task</string>
    <string name="no_date">No date</string>
    <string name="choose_project">Choose a project</string>
    <string name="start_date">Start date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_task_message">Do you want to delete this task?</string>
    <string name="delete_photo_message">Do you want to delete this photo?</string>
    <string name="error_insert_title">Please, insert a title</string>
    <string name="error_choose_project">Please, choose a project</string>
    <string name="title">Title</string>
    <string name="delete_project_message">Do you want to delete this project?</string>
    <string name="notifications">Notifications</string>
    <string name="notify_deadline">Notify me on the deadline day</string>
    <string name="notification_permission_rationale_message">Allow TaskTrackr to send you notifications to always be informed about the status of your projects</string>
    <string name="grant_permission_to_receive_notifications">Grant permission to receive notifications</string>
    <string name="notifications_channel_deadline">Deadline reminders</string>
    <string name="notification_time">Notification time</string>
    <string name="deadline_project_notification_title">Expiring project</string>
    <string name="deadline_task_notification_title">Expiring task</string>
    <string name="photo_capture_success">Photo capture success</string>
    <string name="photo_capture_failed">Photo capture failed</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="system_default">System default</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="project_caption_args">Project: %1$s</string>
    <string name="create_your_first_project">Create your first project!</string>
    <string name="create_your_first_task">Create your first task!</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="cd_insert_title">Insert title</string>
    <string name="cd_insert_description">Insert description</string>
</resources>